# Chess-Engine

./: .gitignore  .prettierrc  CMakeLists.txt  README.md  compile_commands.json  example.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.cache/clangd/index/: api.cpp.306CEA7429D815E5.idx  api.h.A86FC01EC211E75D.idx  pythonModule.cpp.FB0E3F7ECEF321AD.idx
client/: index.html
client/assets/: index.css
client/src/: board.mts  index.mts  moves.mts  player.mts
engine/include/libchess/: board.h
engine/src/: attackTable.cpp  attackTable.h  bitboard.cpp  bitboard.h  board.cpp  buffer.h  core.h  evaluator.cpp  evaluator.h  move.cpp  move.h  movegen.cpp  movegen.h  pieceSquareTable.cpp  pieceSquareTable.h  pythonModule.cpp  rng.cpp  rng.h  searcher.cpp  searcher.h  transpositionTable.cpp  transpositionTable.h  zobrist.cpp  zobrist.h
include/libchess/: api.h  board.h
release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
server/: engine.py  example.py  jupiter.py  main.py  players.py
src/: api.cpp  attackTable.cpp  attackTable.h  bitboard.cpp  bitboard.h  board.cpp  boardState.h  buffer.h  core.cpp  core.h  evaluator.cpp  evaluator.h  move.cpp  move.h  pythonModule.cpp  searcher.cpp  searcher.h
typings/libchess/: __init__.pyi
